<resources>
    <string name="app_name">Capstone</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hint_login_id">Login Id</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="rupee_symbol">₹</string>
    <string name="na">NA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="due_on">due on</string>
    <string name="test_record">Test Record</string>
    <string name="next_installment_dated">Next Installment Dated</string>
    <string name="pay_u20b9">Pay ₹</string>
    <string name="remaining">REMAINING :</string>
    <string name="paid">PAID :</string>
    <string name="no_data_available">No data available</string>
    <string name="topic">Topic :</string>
    <string name="test_date">Test Date</string>
    <string name="subject">Subject :</string>
    <string name="score">Score</string>
    <string name="attendance">Attendance</string>
    <string name="day_sun">SUN</string>
    <string name="day_mon">MON</string>
    <string name="day_tue">TUE</string>
    <string name="day_wed">WED</string>
    <string name="day_thu">THU</string>
    <string name="day_fri">FRI</string>
    <string name="day_sat">SAT</string>
    <string name="button_calendar_next">button calendar next</string>
    <string name="current_month">current month</string>
    <string name="button_calendar_previous">button calendar previous</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_notifications">Notifications</string>
    <string name="test">Test</string>
    <string name="action_logout">Logout</string>
    <string name="e_school_management">E-School Management</string>
</resources>
