<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    android:background="@color/widget_background">

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/boxed"
        android:contentDescription="@string/appwidget_notifications"
        android:text="@string/appwidget_notifications"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/normal_padding"
        android:background="@drawable/boxed"
        android:layout_below="@id/appwidget_text">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boxed">
            <TextView
                android:id="@+id/appwidget_text_static_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boxed"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/test"/>
            <TextView
                android:id="@+id/appwidget_text_test_subject"
                android:layout_below="@id/appwidget_text_static_test"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:text="@string/na"/>
            <TextView
                android:id="@+id/appwidget_text_test_score"
                android:layout_below="@id/appwidget_text_static_test"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_toRightOf="@id/appwidget_text_test_subject"
                android:layout_toEndOf="@id/appwidget_text_test_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/na"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/appwidget_text_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:paddingLeft="@dimen/normal_padding"
            android:paddingStart="@dimen/normal_padding"
            android:paddingRight="@dimen/normal_padding"
            android:paddingEnd="@dimen/normal_padding"
            android:background="@drawable/boxed"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/na"/>
    </LinearLayout>
</RelativeLayout>